--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,19 @@ header p {
     line-height: 30px;
 }
 
+img.avatar {
+    width: 33%;
+    margin: 40px auto;
+    text-align: center;
+}
+
 /* ================================================== */
 /* ===================== LAYOUT ===================== */
 /* ================================================== */
 header {
-    margin: 50px auto;
+    margin: 50px auto 0 auto;
     padding: 60px 0;
-    background-color: #0a71b4;
+    background-color: rgba(10, 113, 180, 0.5);
 }
 
 header .logo {
@@ -45,8 +51,19 @@ header .logo {
     background-position: center center;
 }
 
-section {
-    
+
+
+section {    
+}
+
+.section-header {
+    background-color: /*#0a71b4*/ rgba(30, 113, 180, 0.8);
+    height: 90px;
+    color: white;
+}
+
+.section-header h2 {
+    line-height: 90px;
 }
 
 footer {
@@ -65,6 +82,14 @@ footer {
     height: 2px;
     background-color: #fff;
     margin: 0 auto 20px auto;
+}
+
+.fa {
+    padding: 0 0 20px 0;
+}
+
+.pad-40 {
+    padding: 40px;
 }
 
 /* ================================================== */
