--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,15 @@ img.avatar {
     text-align: center;
 }
 
-ul > li > a {color: white;}
-ul > li > a:hover {color: rgba(30, 113, 180, 1);}
+ul > li > a
+    {color: white;
+}
+
+ul > li > a:hover
+    {color: rgba(30, 113, 180, 1);
+}
+
+i {color: #F58900;}
 
 /* ================================================== */
 /* ===================== LAYOUT ===================== */
@@ -42,7 +49,7 @@ ul > li > a:hover {color: rgba(30, 113, 180, 1);}
 header {
     margin: 50px auto 0 auto;
     padding: 60px 0;
-    background-color: rgba(10, 113, 180, 0.5);
+    background-color: rgba(10, 113, 180, 0.8);
 }
 
 header .logo {
@@ -54,13 +61,15 @@ header .logo {
     background-position: center center;
 }
 
-
+#fond-orange {
+    background-color: #F58900;
+}
 
 section {    
 }
 
 .section-header {
-    background-color: /*#0a71b4*/ rgba(30, 113, 180, 1);
+    background-color: #4793C6;
     height: 90px;
     color: white;
 }
@@ -81,7 +90,7 @@ footer {
 }
 
 .nav-style {
-    background-color: rgba(10, 113, 180, 0.5);
+    background-color: rgba(10, 113, 180, 0.8);
     color: white;
 }
 
@@ -97,7 +106,7 @@ footer {
 }
 
 .pad-40 {
-    padding: 60px;
+    padding: 70px;
 }
 
 /* ================================================== */
