--- a/css/style.css
+++ b/css/style.css
@@ -33,14 +33,6 @@ img.avatar {
     text-align: center;
 }
 
-ul > li > a
-    {color: white;
-}
-
-ul > li > a:hover
-    {color: rgba(30, 113, 180, 1);
-}
-
 i {color: #F58900;}
 
 /* ================================================== */
@@ -69,7 +61,6 @@ section {
 }
 
 .section-header {
-    background-color: /*#0a71b4*/ rgba(30, 113, 180, 0.8);
     background-color: #4793C6;
     height: 90px;
     color: white;
@@ -110,6 +101,44 @@ footer {
 .pad-40 {
     padding: 70px;
 }
+
+/* === fiches conseils === */
+.hovereffect {
+    position: relative;
+    width: 100%;
+    height: 50%;
+    overflow: hidden;
+    text-align: center;
+    transition: all 0.4s linear;
+}
+
+.hovereffect .overlay {
+    position: absolute;
+    left: 25%;
+    top: 25%;
+    color: #fff;
+    font-weight: 700;
+    font-size: 40px;
+    opacity: 0;
+    transition: 0.4s;
+}
+
+.hovereffect img {
+    padding: 0;
+    margin: 0;
+}
+
+.hovereffect:hover .overlay {
+    opacity: 1;
+}
+
+    /* zoom */
+.hovereffect:hover img {
+    -webkit-transform: scale(1.2);
+    
+    transition: all 0.4s linear;
+}
+
 
 /* ================================================== */
 /* ====================== STATE ===================== */
