--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,16 @@ h2 {
 }
 
 h3 {
-    margin:20px auto 20px auto;
+    margin: auto auto 10px auto;
     font-family: "Open" sans-serif;
+    color: #143143;
 
+}
+
+h4 {
+  margin: 10px auto 10px auto;
+  font-family: "Open" sans-serif;
+  color: rgba(10, 113, 180, 0.8)
 }
 
 header p {
@@ -63,7 +70,7 @@ section {
 }
 
 .section-header {
-    background-color: #BCF53F;
+    background-color: #143143;
     height: 90px;
     color: white;
 }
@@ -73,7 +80,7 @@ section {
 }
 
 footer {
-    background-color: rgba(10, 113, 180, 0.8);
+    background-color: #143143;
     height: 350px;
     text-align: justify;
     display: flex;
@@ -122,7 +129,7 @@ footer {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #fff;
-  background-color: #00a7ca;
+  background-color: #143143;
     background-image: none;
 }
 .navbar-default .navbar-nav > .open > a,
@@ -232,11 +239,16 @@ footer {
 /* --- Styles prestations ---*/
 
 .prestation {
-  padding: 100px 0px 0px 0px;
+  padding: 100px 0px 100px 0px;
+}
+
+.article-prestation {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .prestation p {
-  margin: 0 0 200px 0;
+  margin: 0 0 20px 0;
   text-align: justify;
   font-size: 14px;
 }
