form bootsratp + footer contact

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ h3 {
     color: #143143;
 }
 
+.h3-contact {
+    padding: 20px;
+}
+
 h4 {
   margin: 10px auto 10px auto;
   font-family: "Open" sans-serif;
@@ -59,6 +63,9 @@ i {
     color: #F58900;
 }
 
+form {
+    margin: 30px;
+}
 
 /* ================================================== */
 /* ===================== LAYOUT ===================== */
@@ -318,6 +325,9 @@ footer {
     z-index: 99;
 }
 
+.google-map {
+    padding: 30px;
+}
 
 /* ================================================== */
 /* ====================== STATE ===================== */
