--- a/css/style.css
+++ b/css/style.css
@@ -89,14 +89,26 @@ header .logo {
 }
 
 footer {
-    background-color: #143143;
-
-    color: white;
+  height: 420px;
 }
 
 .bloc-footer {
   padding: 50px;
+  background-color: #143143;
+  height: 100%;
 }
+
+.bloc-footer p, h4  {
+  color: white;
+  text-align: center;
+}
+
+.bloc-footer button {
+  background-color: rgba(10, 113, 180, 0.8);
+  border: none;
+  color: white;
+}
+
 
 
 /* ================================================== */
@@ -207,6 +219,13 @@ footer {
     height: 2px;
     background-color: #fff;
     margin: 0 auto 20px auto;
+}
+
+.separator-footer {
+    width: 150px;
+    height: 1px;
+    background-color: #fff;
+    margin: 15px auto 15px auto;
 }
 
 .fa {
