--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,15 @@ footer {
   color: white;
 }
 
+#myModalLabel {
+  color: rgba(10, 113, 180, 0.8);
+}
+
+.modal-body h4 {
+  color: rgba(10, 113, 180, 0.8);
+}
+
+
 
 
 /* ================================================== */
