--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    margin-right: 0px;
 }
 
 h1,
@@ -58,7 +59,6 @@ img.avatar {
 i {
     color: #F58900;
 }
-
 
 /* ================================================== */
 /* ===================== LAYOUT ===================== */
