--- a/css/style.css
+++ b/css/style.css
@@ -114,14 +114,6 @@ footer {
  color: white;
 }
 
-#myModalLabel {
- color: rgba(10, 113, 180, 0.8);
-}
-
-.modal-body h4 {
- color: rgba(10, 113, 180, 0.8);
-}
-
 /* ================================================== */
 
 
@@ -247,6 +239,13 @@ footer {
     padding: 70px;
 }
 
+#myModalLabel {
+ color: rgba(10, 113, 180, 0.8);
+}
+
+.modal-body h4 {
+ color: rgba(10, 113, 180, 0.8);
+}
 
 /* === fiches conseils === */
 
@@ -316,6 +315,9 @@ footer {
     text-align: center;
 }
 
+.pad-map {
+    padding-top: 50px;
+}
 
 /* --- Styles prestations ---*/
 
