--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,7 @@ footer {
     width: 150px;
     height: 2px;
     background-color: #143143;
-    margin: 30px auto 20px auto;
+    margin: 50px auto 20px auto;
 }
 
 .article-prestation {
@@ -447,6 +447,9 @@ footer {
     z-index: 99;
 }
 
+.fa-prestation {
+    padding-top: 40px;
+}
 
 /* ================================================== */
 
