back-color header refaite

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ header {
     height: 300px;
     margin: 50px auto 0 auto;
     padding: 30px 0;
-    background-color: rgba(10, 113, 180, 0.8);
+    background-color: #143143;
     background-image: url(../images/facade.JPG);
     background-size: 100%;
     background-position: center center;
