css- contact- ajout padding à la googlemap

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ i {
     margin-top: 50px;
 }
 
+.map {
+    padding-top: 15px;
+}
+
 /* ================================================== */
 
 
