--- a/css/style.css
+++ b/css/style.css
@@ -173,10 +173,39 @@ header p {
 }
 
 footer {
-    height : 50px;
     background-color: #143143;
 }
 
+footer p {
+    display: inline;
+    color: white;
+    margin: 0px;
+    font-size: 0.8em;
+}
+
+footer a {
+    padding: 0px;
+    color:white;
+    font-size: 0.8em;
+    font-weight: 400;
+}
+
+footer a:hover {
+    text-decoration: none;
+    color:#337ab7;
+    cursor: pointer;
+}
+
+.padding-footer {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+/*============= Modal =============*/
+
+.modal-header {
+    padding-top: 50px;
+}
 
 /* --- style partie gauche et droite avec l'aside de prise
 de RDV --- */
@@ -197,13 +226,6 @@ aside.part-right {
     background-color: #143143;
     margin: 30px auto;
 }
-
-
-
-footer h4 {
-    color: #eee;
-}
-
 
 /* ================================================== */
 
