--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     margin-right: 0px;
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIklEQVQIW2NkQAJn7v7/zwjjgzgmyoyMYAEYB8RmROaABAAJ6Q+sSxkb3QAAAABJRU5ErkJggg==);
 }
 
 h1,
@@ -152,6 +153,10 @@ header p {
     font-weight: 500;
 }
 
+section {
+    background-color: #fff;
+}
+
 
 /* --- logo en xs --- */
 
@@ -181,25 +186,73 @@ footer {
 /* --- style partie gauche et droite avec l'aside de prise
 de RDV --- */
 .part-left {
-    border-right: 1px solid #143143;
+    border-left: 1px solid #143143;
 }
 
-aside.part-right {
-    position: relative;
-    padding: 15px 15px 15px 60px;
+aside {
+    padding: 0 25px;
     text-align: center;
-    height: 100%;
 }
+
+aside h2 {
+    margin: 25px 0 20px 0;
+    text-transform: capitalize;
+    color: #456;
+}
+
+aside img {
+    margin: 40px auto;
+}
+
+aside .btn-default {
+    color: #eee;
+    background-color: #456;
+    text-shadow: 0 0 0 #fff;
+    transition: .2s;
+}
+aside .btn-default:hover {
+    color: #456;
+    background-color: #eee;
+    transition: .2s;
+}
+
+
 
 .aside-separator {
     width: 80%;
     height: 1px;
-    background-color: #143143;
+    background-color: #abc;
     margin: 30px auto;
 }
 
+/* styles des articles dans l'aside */
+aside article {
+    padding: 10px;
+    margin: 20px 10px;
+    border: 1px solid #abc;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+aside article h3 {
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 5px 0;
+}
+aside article p {
+    text-align: justify;
+}
+aside article img {
+    margin: 20px 0;
+}
+/* la classe calendar disparaitra quand il y aura un vrai calendrier
+dans l'aside */
+.calendar {
+    border: 1px solid #abc;
+    border-radius: 4px;
+}
 
 
+/* --- footer --- */
 footer h4 {
     color: #eee;
 }
