--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,10 @@ footer h4 {
     margin: auto;
 }
 
+.btn-padding-reset {
+    padding: 6px 0px;
+}
+
 
 /* --- virer les margins des col-* en cas de besoin --- */
 
@@ -575,7 +579,7 @@ ul li:hover a {
     width: 150px;
     height: 2px;
     background-color: #143143;
-    margin: 50px auto 20px auto;
+    margin: 0px auto 20px auto;
 }
 
 .article-prestation {
