--- a/css/style.css
+++ b/css/style.css
@@ -193,13 +193,16 @@ header p {
 }
 
 footer {
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
     background-color: #143143;
 }
 
 footer p {
     display: inline;
     color: white;
-    margin: 0px;
+    margin: 0;
     font-size: 0.8em;
 }
 
@@ -214,11 +217,6 @@ footer a:hover {
     text-decoration: none;
     color:#337ab7;
     cursor: pointer;
-}
-
-.padding-footer {
-    padding-top: 10px;
-    padding-bottom: 10px;
 }
 
 /*============= Modal =============*/
