--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
 
 
 /* ================================================== */
-
 body {
     font-family: 'Open Sans', sans-serif;
     margin-right: 0px;
@@ -57,6 +56,7 @@ img.avatar {
     width: 50%;
     margin: 40px auto;
     text-align: center;
+    outline: 1px solid red;
 }
 
 i {
